--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
   <title>RyckYMorty</title>
 </head>
 
-<body>
+<body class="page">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <!--
